--- a/src/main.css
+++ b/src/main.css
@@ -272,6 +272,8 @@ figure {
   top: 50%;
   left: 50%;
   translate: -50% -50%;
+  /*remove all rogue whitespaces*/
+  font-size: 0;
 }
 .highlight img {
   position: static;
