--- a/src/main.css
+++ b/src/main.css
@@ -272,6 +272,7 @@ figure {
   top: 50%;
   left: 50%;
   translate: -50% -50%;
+  border-radius: var(--card-border-radius);
   /*remove all rogue whitespaces*/
   font-size: 0;
 }
