--- a/src/main.css
+++ b/src/main.css
@@ -4,7 +4,7 @@
   --black-50: rgba(20, 20, 20, 0.5);
   --text-shadow-default: 0.1rem 0.1rem 0 var(--black-50);
 
-  --door-width: 150px;
+  --door-width: 7rem;
   --gap: 2rem;
   --card-border-radius: 4.75% / 3.5%;
   --white: rgb(245, 245, 245);
@@ -62,6 +62,14 @@ html {
   text-align: center;
   background: radial-gradient(var(--red), var(--red-dark));
   color: var(--gold-light);
+}
+@media screen and (max-device-width: 640px) {
+  html {
+    font-size: 0.4rem;
+  }
+  :root {
+    --door-width: 12rem;
+  }
 }
 body {
   margin: 0;
