Refine reds in main and day 5

--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,8 @@
 :root {
-  --red: rgb(175, 28, 18);
-  --red-dark: rgb(117, 3, 3);
+  /*--red: rgb(175, 28, 18);*/
+  /*--red-dark: rgb(117, 3, 3);*/
+  --red: rgb(150, 25, 17);
+  --red-dark: rgb(112, 8, 8);
   --black-50: rgba(20, 20, 20, 0.5);
   --text-shadow-default: 0.1rem 0.1rem 0 var(--black-50);
 
