--- a/src/9.css
+++ b/src/9.css
@@ -4,18 +4,44 @@
   --cat-pink: hsl(0, 74%, 78%);
   --cat-pink-dark: #c4606f;
   --anim-duration: 4s;
-
   transform-style: flat;
 
-  background: radial-gradient(
-      ellipse 180% 50% at 50% 80%,
-      hsl(46, 97%, 70%),
-      hsl(38, 82%, 54%),
-      #ce732b 65%,
+  background: linear-gradient(
+      45deg,
+      transparent 10%,
+      hsla(300, 100%, 25%, 80%),
       transparent
     ),
     linear-gradient(to bottom, #050d23, #141d4e 50%);
 }
+#highlight-day-9:before {
+  --star: hsl(180, 30%, 96%);
+  background: radial-gradient(circle at 0% 4%, var(--star), transparent 0.6vh),
+    radial-gradient(circle at 9% 11%, var(--star), transparent 0.8vh),
+    radial-gradient(circle at 20% 6%, var(--star), transparent 0.2vh),
+    radial-gradient(circle at 31% 9%, var(--star), transparent 0.5vh),
+    radial-gradient(circle at 39% 2%, var(--star), transparent 0.8vh),
+    radial-gradient(circle at 53% 10%, var(--star), transparent 0.3vh),
+    radial-gradient(circle at 61% 8%, var(--star), transparent 0.6vh),
+    radial-gradient(circle at 69% 2%, var(--star), transparent 0.4vh),
+    radial-gradient(circle at 82% 11%, var(--star), transparent 0.7vh),
+    radial-gradient(circle at 90% 7%, var(--star), transparent 0.3vh),
+    radial-gradient(circle at 100% 2%, var(--star), transparent 0.7vh);
+  animation: hovering calc(var(--anim-duration) * 2.5) infinite ease-in-out;
+}
+#highlight-day-9:after {
+  background: radial-gradient(
+    ellipse 180% 50% at 50% 80%,
+    hsl(46, 97%, 70%),
+    hsl(38, 82%, 54%),
+    #ce732b 65%,
+    transparent
+  );
+  animation: hovering var(--anim-duration) infinite ease-in-out;
+}
+
+#highlight-day-9:before,
+#highlight-day-9:after,
 #highlight-day-9 .img-wrapper:after,
 #highlight-day-9 [class*='ghost-'],
 #highlight-day-9 [class*='ghost-']:before,
@@ -31,14 +57,14 @@
   width: 100%;
 }
 #highlight-day-9 .img-wrapper {
-  z-index: -1;
+  z-index: 10;
   box-shadow:
     0 0 0.5vh hsl(38, 100%, 86%),
     0 0 0.8vh hsl(43, 97%, 70%),
     0 0 2vh hsl(35, 84%, 50%);
   perspective: var(--perspective);
   transform-origin: bottom center;
-  animation: slap var(--anim-duration) infinite;
+  animation: slap var(--anim-duration) infinite ease-in-out;
 }
 @keyframes slap {
   0%,
@@ -48,7 +74,11 @@
   75% {
     transform: translateX(5%) skewY(1deg);
   }
+  100% {
+    transform: translateX(0);
+  }
 }
+
 #highlight-day-9 .img-wrapper:after {
   box-shadow:
     inset 0 0 1vh #ce732b,
@@ -68,8 +98,7 @@
   left: -60%;
   height: 100vh;
   width: 80%;
-  z-index: -1;
-  /*filter: blur(0.25vh);*/
+  z-index: -2;
   container: paw / size;
 
   animation: paw var(--anim-duration) infinite;
