--- a/src/13.css
+++ b/src/13.css
@@ -95,7 +95,7 @@
 #highlight-day-13 .inner-ghost-0 .inner-part-a:after,
 #highlight-day-13 .inner-ghost-0 .inner-part-b:before {
   color: var(--white);
-  content: 'YESH,';
+  content: 'YEHS,';
   white-space: nowrap;
   text-align: left;
   font-size: 4vh;
